// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-label-info-beta #render should render component as expected (1) 1`] = `
<gux-label-info-beta>
  <template shadowrootmode="open">
    <div class="gux-label-info">
      <gux-screen-reader-beta>
      </gux-screen-reader-beta>
      <gux-icon icon-name="fa/circle-info-regular" size="small" decorative="">
      </gux-icon>
      <gux-tooltip-beta placement="right">
        <slot name="content">
        </slot>
      </gux-tooltip-beta>
    </div>
  </template>
</gux-label-info-beta>
`;

exports[`gux-label-info-beta #render should render component as expected (2) 1`] = `
<gux-label-info-beta variant="question">
  <template shadowrootmode="open">
    <div class="gux-label-info">
      <gux-screen-reader-beta>
        This is some tooltip text
      </gux-screen-reader-beta>
      <gux-icon icon-name="fa/circle-question-regular" size="small" decorative="">
      </gux-icon>
      <gux-tooltip-beta placement="right">
        <slot name="content">
        </slot>
      </gux-tooltip-beta>
    </div>
  </template>
  <span slot="content">
    This is some tooltip text
  </span>
</gux-label-info-beta>
`;

exports[`gux-label-info-beta #render should render component as expected (3) 1`] = `
<gux-label-info-beta variant="info">
  <template shadowrootmode="open">
    <div class="gux-label-info">
      <gux-screen-reader-beta>
      </gux-screen-reader-beta>
      <gux-icon icon-name="fa/circle-info-regular" size="small" decorative="">
      </gux-icon>
      <gux-tooltip-beta placement="right">
        <slot name="content">
        </slot>
      </gux-tooltip-beta>
    </div>
  </template>
</gux-label-info-beta>
`;

exports[`gux-label-info-beta #render should render component as expected (4) 1`] = `
<gux-label-info-beta>
  <template shadowrootmode="open">
    <div class="gux-label-info">
      <gux-screen-reader-beta>
        This is some tooltip text
      </gux-screen-reader-beta>
      <gux-icon icon-name="fa/circle-info-regular" size="small" decorative="">
      </gux-icon>
      <gux-tooltip-beta placement="right">
        <slot name="content">
        </slot>
      </gux-tooltip-beta>
    </div>
  </template>
  <span slot="content">
    This is some tooltip text
  </span>
</gux-label-info-beta>
`;

exports[`gux-label-info-beta #render should render component as expected (5) 1`] = `
<gux-label-info-beta>
  <template shadowrootmode="open">
    <div class="gux-label-info">
      <gux-screen-reader-beta>
        This is some tooltip text
      </gux-screen-reader-beta>
      <gux-icon icon-name="fa/circle-info-regular" size="small" decorative="">
      </gux-icon>
      <gux-tooltip-beta placement="right">
        <slot name="content">
        </slot>
      </gux-tooltip-beta>
    </div>
  </template>
  <span slot="content">
    This is some
    <b>
      tooltip
    </b>text
  </span>
</gux-label-info-beta>
`;

exports[`gux-label-info-beta #render should render component as expected (6) 1`] = `
<gux-label-info-beta variant="invalid-variant">
  <template shadowrootmode="open">
    <div class="gux-label-info">
      <gux-screen-reader-beta>
        This is an information tooltip
      </gux-screen-reader-beta>
      <gux-icon icon-name="fa/circle-info-regular" size="small" decorative="">
      </gux-icon>
      <gux-tooltip-beta placement="right">
        <slot name="content">
        </slot>
      </gux-tooltip-beta>
    </div>
  </template>
  <span slot="content">
    This is an information tooltip
  </span>
</gux-label-info-beta>
`;
